grammar.js
    module: $ => repeat($._statement),

    _statement: $ => choice($._simple_statements, $._compound_statement),

    // -----------------------------------------------------------------------
    // Simple statements

    return_statement: $ => seq('return', optional($._expressions)),
    pass_statement: _ => prec.left('pass'),
    comptime_statement: $ =>
      seq(
        choice('comptime', 'type'),
        choice(
          field('left', $.constrained_comptime_parameter),
          seq(
            field(
              'left',
              choice($.comptime_parameter, $.constrained_comptime_parameter),
            ),
            seq('=', field('right', $._comptime_rhs)),
          ),
        ),
      ),

    // -----------------------------------------------------------------------
    // Compound statements

    if_statement: $ =>
      seq(
        $._if_statement_header,
        ':',
        field('consequence', $._suite),
        repeat(field('alternative', $.elif_clause)),
        optional(field('alternative', $.else_clause)),
      ),
    _if_statement_header: $ => seq(optional('comptime'), $._if_clause),
    function_declaration: $ =>
      seq($.function_signature, ':', field('body', $._suite)),

    function_signature: $ =>
      seq(
        optional('async'),
        'def',
        $._comptime_parameter,
        field('arguments', $.callable_parameters),
        field('effects', optional($.function_effects)),
        field('captures', optional($.capture_parameters)),
        optional($._function_return_type),
        optional($._where_clauses),
      ),

    function_effects: $ => repeat1($._function_effect),
    _function_effect: $ => choice($.raises, $.abi, $.thin),

    _function_return_type: $ =>
      seq(
        '->',
        optional($._parameterized_ref_conv),
        field('return_type', $._return_parameter),
      ),

    mlir_region_declaration: $ =>
      seq($.mlir_region_signature, ':', field('body', $._suite)),

    mlir_region_signature: $ =>
      seq(
        '__mlir_region',
        $._parameter_decl,
        field('arguments', $.mlir_callable_parameters),
      ),

    struct_declaration: $ => seq($.struct_header, ':', field('body', $._suite)),
    struct_header: $ =>
      seq(
        choice('class', 'struct'),
        $._comptime_parameter,
        field('conformance', optional($.conformance)),
        optional($._where_clauses),
      ),

    _suite: $ =>
      choice(
        alias($._newline, $.block),
        seq($._indent, $.block),
        alias($._simple_statements, $.block),
      ),

    block: $ => seq(repeat($._statement), $._dedent),

    // -----------------------------------------------------------------------
    // Parameters declaration

    comptime_parameter: $ =>
      seq($._comptime_parameter, optional($._where_clauses)),

    _comptime_parameter: $ =>
      seq(
        $._parameter_decl,
        field('parameters', optional($.parameters_declaration)),
      ),

    parameters_declaration: $ =>
      seq('[', trailingCommaSep1($.parameter_declaration), ']'),

    function_type: $ =>
      seq(
        'def',
        field('parameters', optional($.parameters_declaration)),
        field('arguments', $.function_type_parameters),
        field('effects', optional($.function_effects)),
        optional($._function_return_type),
      ),

    function_type_parameters: $ =>
      seq('(', optional(trailingCommaSep1($._function_type_parameter)), ')'),

    _function_type_parameter: $ =>
      seq(optional($._convention), $.function_type_parameter),

    callable_parameters: $ =>
      seq('(', optional(trailingCommaSep1($._callable_parameter)), ')'),

    _callable_parameter: $ =>
      seq(optional($._convention), $.callable_parameter),

    constrained_parameter_decl: $ => seq($._parameter_decl, $._constraint),

    constrained_variadic_parameter_decl: $ =>
      seq($._variadic_parameter_decl, $._constraint),

    // -----------------------------------------------------------------------
    // Lambda parameters

    parameter_decl: $ => $._parameter_decl,
    _parameter_decl: $ =>
      field('name', choice($.identifier, $.escaped_identifier)),

    _variadic_parameter_decl: $ => seq(choice('*', '**'), $._parameter_decl),

    // -----------------------------------------------------------------------
    // Conformance

    conformance: $ =>
      seq('(', optional(trailingCommaSep1($._conformance_expression)), ')'),

    _conformance_expression: $ =>
      seq($.conformance_parameter, optional($._where_clauses)),

    _where_clauses: $ => repeat1($.where_clause),
    where_clause: $ => seq('where', choice($.mlir_attr, $.expression)),

    // -----------------------------------------------------------------------
    // MLIR

    mlir_callable_parameters: $ =>
      seq('(', trailingCommaSep1($.constrained_mlir_parameter_decl), ')'),

    constrained_mlir_parameter_decl: $ =>
      seq($._parameter_decl, $._mlir_constraint),

    _mlir_constraint: $ => seq(':', field('constraint', $.mlir_type)),

    mlir_op_parameters: $ =>
      seq('[', trailingCommaSep1($.named_parameter), ']'),

    mlir_attr: $ =>
      seq(
        choice('__mlir_attr', '__mlir_deferred_attr'),
        choice(
          seq('.', choice($._mlir_attr_escaped_parameters, $.identifier)),
          seq('[', trailingCommaSep1($.mlir_attr_parameter), ']'),
        ),
      ),

    mlir_attr_parameter: $ =>
      choice($._mlir_attr_escaped_parameters, $._standalone_parameter),

    _mlir_attr_escaped_parameters: $ =>
      seq('`', repeat1($._mlir_attr_escaped_part), '`'),

    mlir_type: $ =>
      seq(
        choice('__mlir_type', '__mlir_deferred_type'),
        choice(
          seq('.', choice($._mlir_type_escaped_parameters, $.identifier)),
          seq('[', trailingCommaSep1($.mlir_type_parameter), ']'),
        ),
      ),

    mlir_type_parameter: $ =>
      choice($._mlir_type_escaped_parameters, $._standalone_parameter),

    _mlir_type_escaped_parameters: $ =>
      seq('`', repeat1($._mlir_type_escaped_part), '`'),

    mlir_parameter: $ => choice($.mlir_dotted_identifier, $.integer),

    // -----------------------------------------------------------------------
    // Parameters

    parameters: $ =>
      seq('[', optional(trailingCommaSep1($.parameter_expression)), ']'),

    named_parameter: $ =>
      seq(
        $._parameter_decl,
        '=',
        field('value', choice($.function_type, $._parameter_rhs)),
      ),

    variadic_parameter: $ =>
      seq(
        choice('*', '**'),
        choice($._non_composite_parameter, $.parameter_member),
      ),

    parameter: $ => choice($.identifier, $.self),
    _non_composite_parameter: $ =>
      choice($.parameter, alias($.subscript, $.generic_parameter)),

    parameter_member: $ => $.member_access,

    _comptime_rhs: $ =>
      choice(
        $.function_type,
        $.mlir_attr,
        $.mlir_type,
        $.parameter_union,
        $.parameter_composition,
        $._standalone_parameter,
      ),

    _parameter_rhs: $ =>
      choice($.mlir_attr, $.mlir_type, $._standalone_parameter, $.slice),

    _constraint: $ => seq(':', field('constraint', $._constraint_parameter)),
    _standalone_parameter: $ =>
      choice($._non_composite_parameter, $.parameter_member, $.expression),

    // -----------------------------------------------------------------------
    // Arguments

    arguments: $ => seq('(', optional($._arguments), ')'),
    _arguments: $ => trailingCommaSep1($.argument),
    keyword_argument: $ =>
      seq(
        field('name', $._identifier),
        '=',
        field('value', choice($.mlir_attr, $.expression)),
      ),

    // -----------------------------------------------------------------------
    // Assignment

    assignment: $ =>
      seq(
        optional($._declaration_convention),
        choice(
          field('left', $.constrained_lhs),
          seq(
            field('left', choice($.constrained_lhs, $._lhs)),
            seq('=', field('right', $._rhs)),
          ),
        ),
      ),
    constrained_lhs: $ => seq($._lhs, $._constraint),

    _declaration_convention: $ => choice('var', 'ref'),
    _lhs: $ => choice($.pattern_list, $.pattern, $.call),
    _rhs: $ =>
      choice(
        $.mlir_attr,
        $.assignment,
        $.augmented_assignment,
        $.pattern_list,
        $.yield,
        $.expression_list,
        $.expression,
      ),

    pattern_list: $ =>
      seq(
        $.pattern,
        choice(',', seq(repeat1(seq(',', $.pattern)), optional(','))),
      ),

    parenthesized_expression: $ =>
      seq(optional('comptime'), seq('(', choice($.yield, $.expression), ')')),

    initializer_list: $ => seq('{', optional($._arguments), '}'),
    _expressions: $ => choice($.mlir_attr, $.expression_list, $.expression),

    comparison_operator: $ =>
      seq(
        $.primary_expression,
        repeat1(
          prec.left(
            'comparisons',
            seq($._comparison_operator, $.primary_expression),
          ),
        ),
      ),

    _comparison_operator: $ =>
      choice(
        '<',
        '<=',
        '==',
        '!=',
        '>=',
        '>',
        'in',
        alias($._not_in, 'not in'),
        'is',
        alias($._is_not, 'is not'),
      ),
    not_operator: $ => seq('not', field('argument', $.expression)),
    boolean_operator: $ =>
      choice(
        prec.left(
          'and',
          seq(
            field('left', $.expression),
            field('operator', 'and'),
            field('right', $.expression),
          ),
        ),
        prec.left(
          'or',
          seq(
            field('left', $.expression),
            field('operator', 'or'),
            field('right', $.expression),
          ),
        ),
      ),

    unary_operator: $ =>
      prec(
        'unary',
        seq(
          field('operator', choice('+', '-', '~')),
          field('argument', $.primary_expression),
        ),
      ),

    member_access: $ =>
      prec(
        'call',
        seq(
          field('value', choice($._primary, $.transfer_operator)),
          repeat1(seq('.', field('member', $._member))),
        ),
      ),

    _member: $ =>
      choice(
        $.member_call,
        $.member_subscript,
        $.escaped_identifier,
        $._identifier,
      ),

    call: $ =>
      prec(
        'call',
        seq(
          field('function', $._primary),
          field('arguments', choice($.arguments, $.generator_expression)),
        ),
      ),

    member_call: $ =>
      prec(
        'call',
        seq(
          field('function', $._member),
          field('arguments', choice($.arguments, $.generator_expression)),
        ),
      ),

    mlir_op: $ =>
      seq('__mlir_op', $._mlir_op_parameters, field('arguments', $.arguments)),

    _mlir_op_parameters: $ =>
      seq(
        '.',
        seq('`', $.mlir_dotted_identifier, '`'),
        field('parameters', optional($.mlir_op_parameters)),
      ),

    subscript: $ =>
      prec(
        'call',
        seq(field('value', $._primary), field('parameters', $.parameters)),
      ),

    member_subscript: $ =>
      prec(
        'call',
        seq(field('value', $._member), field('parameters', $.parameters)),
      ),

    _primary: $ => choice($.call, $.mlir_op, $.subscript, $._atom),
    string: $ =>
      seq(
        $.string_start,
        repeat(choice($.interpolation, $.string_content)),
        $.string_end,
      ),

    string_content: $ =>
      prec.right(
        repeat1(
          choice(
            $._string_content,
            $.escape_interpolation,
            $.escape_sequence,
            $._not_escape_sequence,
          ),
        ),
      ),

    _not_escape_sequence: _ => token.immediate('\\'),

    mlir_string: $ => token(seq('"', /[^`"\n\v\\]*/, '"')),
    integer: _ =>
      token(
        choice(
          seq(choice('0x', '0X'), repeat1(/_?[A-Fa-f0-9]+/), optional(/[Ll]/)),
          seq(choice('0o', '0O'), repeat1(/_?[0-7]+/), optional(/[Ll]/)),
          seq(choice('0b', '0B'), repeat1(/_?[0-1]+/), optional(/[Ll]/)),
          seq(
            repeat1(/[0-9]+_?/),
            choice(
              optional(/[Ll]/), // long numbers
              optional(/[jJ]/), // complex numbers
            ),
          ),
        ),
      ),

    identifier: _ => /[_\p{XID_Start}][_\p{XID_Continue}]*/,
    mlir_dotted_identifier: $ => sep1(reserved('mlir', $.identifier), '.'),
    _identifier: $ => choice($.identifier, alias('match', $.identifier)),

    // -----------------------------------------------------------------------
    // Literals

    true: _ => 'True',
    none: _ => 'None',
    self: _ => 'Self',

    thin: _ => 'thin',

    underscore: _ => '_',
    ellipsis: _ => '...',

    infer_only_marker: _ => '//',
    positional_only_marker: _ => '/',
    comment: _ => token(seq('#', /.*/)),
