test/corpus/mojo/MLIR.txt
================================================================================
MLIR: type
================================================================================

var a: __mlir_type.i1 
var b: __mlir_type.`!kgen.none`
var c: __mlir_type.`!kgen.scalar<f64>`
var d: __mlir_type.`!kgen.pointer<!kgen.pointer<f32>>`
var e: __mlir_type[`!kgen.pointer<!kgen.pointer<scalar<ui8>>>`]
var f: __mlir_type[
    `!kgen.struct<:`,
    type_of(Self.element_types.values),
    Self.element_types.values,
    ` isParamPack>`,
]

comptime OriginSet = __mlir_type.`!lit.origin.set`

comptime T = _MLIR.KGENParamListType[__mlir_type.`!kgen.type`]

comptime _IntToXGeneratorType[ToT: _MLIR.KGENTypeType] = __mlir_type[
    `!lit.generator<<"Idx":`,
    Int,
    `>`,
    +ToT,
    `>`,
]

comptime type = __mlir_type[
    `!pop.array<`, Self.size.__mlir_index__(), `, `, Self.ElementType, `>`
]

comptime _kgen_pack_splat_type[dtype: DType, n: Int] = __mlir_type[
    `!kgen.struct<`,
    ~TypeList.splat[
        Trait=TrivialRegisterPassable, count=n, type=Scalar[dtype]
    ]().values,
    ` isParamPack>`,
]

comptime _mlir_type = __mlir_type[
    `!kgen.struct<:`,
    type_of(Self.element_types.values),
    Self.element_types.values,
    ` isParamPack>`,
]

comptime _union_type = __mlir_type[
    `!pop.union<[rebind(:`,
    type_of(Self.Ts.values),
    ` `,
    Self.Ts.values,
    `)]>`,
]

comptime _loaded_kgen_pack_type = __mlir_type[
    `!kgen.struct<:param_list<type> `,
    Self._variadic_with_pointers_removed,
    ` isParamPack>`,
]

comptime _mlir_type = __mlir_type[
    `!lit.ref.pack<:param_list<`,
    Self.element_trait,
    `> `,
    Self.element_types.values,
    `, `,
    Self.origin._mlir_origin,
    `>`,
]

comptime _ReducerGeneratorType[
    FromAndTo: AnyType,
] = __mlir_type[
    `!lit.generator<<"Prev": `,
    +FromAndTo,
    `, "From": `,
    +Self.type,
    `>`,
    +FromAndTo,
    `>`,
]

comptime _ReduceVariadicIdxGeneratorTypeGenerator[
    Prev: AnyType
] = __mlir_type[
    `!lit.generator<<"Prev": `,
    +Prev,
    `, "From": `,
    _MLIR.KGENParamListType[Self.Trait],
    `, "Idx":`,
    Int,
    `>`,
    +Prev,
    `>`,
]

struct IntLiteral[value: __mlir_type.`!pop.int_literal`](
    Boolable,
    Ceilable,
    Defaultable,
    Floorable,
    Indexer,
    Intable,
    TrivialRegisterPassable,
    Truncable,
    Writable,
):
    pass

def _to_nvvm_layout[s: StaticString]() -> __mlir_type.`!kgen.deferred`:
    pass

--------------------------------------------------------------------------------

(module
  (assignment
    left: (constrained_lhs
      (identifier)
      constraint: (mlir_type
        (identifier))))
  (assignment
    left: (constrained_lhs
      (identifier)
      constraint: (mlir_type
        (mlir_type_prefix)
        (mlir_parameter
          (mlir_dotted_identifier
            (identifier)
            (identifier))))))
  (assignment
    left: (constrained_lhs
      (identifier)
      constraint: (mlir_type
        (mlir_type_prefix)
        (mlir_parameter
          (mlir_dotted_identifier
            (identifier)
            (identifier)))
        (mlir_type_special_character)
        (mlir_parameter
          (mlir_dotted_identifier
            (identifier)))
        (mlir_type_special_character))))
  (assignment
    left: (constrained_lhs
      (identifier)
      constraint: (mlir_type
        (mlir_type_prefix)
        (mlir_parameter
          (mlir_dotted_identifier
            (identifier)
            (identifier)))
        (mlir_type_special_character)
        (mlir_type_prefix)
        (mlir_parameter
          (mlir_dotted_identifier
            (identifier)
            (identifier)))
        (mlir_type_special_character)
        (mlir_parameter
          (mlir_dotted_identifier
            (identifier)))
        (mlir_type_special_character)
        (mlir_type_special_character))))
  (assignment
    left: (constrained_lhs
      (identifier)
      constraint: (mlir_type
        (mlir_type_parameter
          (mlir_type_prefix)
          (mlir_parameter
            (mlir_dotted_identifier
              (identifier)
              (identifier)))
          (mlir_type_special_character)
          (mlir_type_prefix)
          (mlir_parameter
            (mlir_dotted_identifier
              (identifier)
              (identifier)))
          (mlir_type_special_character)
          (mlir_parameter
            (mlir_dotted_identifier
              (identifier)))
          (mlir_type_special_character)
          (mlir_parameter
            (mlir_dotted_identifier
              (identifier)))
          (mlir_type_special_character)
          (mlir_type_special_character)
          (mlir_type_special_character)))))
  (assignment
    left: (constrained_lhs
      (identifier)
      constraint: (mlir_type
        (mlir_type_parameter
          (mlir_type_prefix)
          (mlir_parameter
            (mlir_dotted_identifier
              (identifier)
              (identifier)))
          (mlir_type_special_character)
          (mlir_type_special_character))
        (mlir_type_parameter
          (call
            function: (identifier)
            arguments: (arguments
              (member_access
                value: (self)
                member: (identifier)
                member: (identifier)))))
        (mlir_type_parameter
          (parameter_member
            value: (self)
            member: (identifier)
            member: (identifier)))
        (mlir_type_parameter
          (mlir_parameter
            (mlir_dotted_identifier
              (identifier)))
          (mlir_type_special_character)))))
  (comptime_statement
    left: (comptime_parameter
      name: (identifier))
    right: (mlir_type
      (mlir_type_prefix)
      (mlir_parameter
        (mlir_dotted_identifier
          (identifier)
          (identifier)
          (identifier)))))
  (comptime_statement
    left: (comptime_parameter
      name: (identifier))
    right: (parameter_member
      value: (identifier)
      member: (member_subscript
        value: (identifier)
        parameters: (parameters
          (mlir_type
            (mlir_type_prefix)
            (mlir_parameter
              (mlir_dotted_identifier
                (identifier)
                (identifier))))))))
  (comptime_statement
    left: (comptime_parameter
      name: (identifier)
      parameters: (parameters_declaration
        (constrained_parameter_decl
          name: (identifier)
          constraint: (parameter_member
            value: (identifier)
            member: (identifier)))))
    right: (mlir_type
      (mlir_type_parameter
        (mlir_type_prefix)
        (mlir_parameter
          (mlir_dotted_identifier
            (identifier)
            (identifier)))
        (mlir_type_special_character)
        (mlir_type_special_character)
        (mlir_string)
        (mlir_type_special_character))
      (mlir_type_parameter
        (parameter
          (identifier)))
      (mlir_type_parameter
        (mlir_type_special_character))
      (mlir_type_parameter
        (unary_operator
          argument: (identifier)))
      (mlir_type_parameter
        (mlir_type_special_character))))
  (comptime_statement
    left: (comptime_parameter
      name: (identifier))
    right: (mlir_type
      (mlir_type_parameter
        (mlir_type_prefix)
        (mlir_parameter
          (mlir_dotted_identifier
            (identifier)
            (identifier)))
        (mlir_type_special_character))
      (mlir_type_parameter
        (parameter_member
          value: (self)
          member: (identifier)
          member: (member_call
            function: (identifier)
            arguments: (arguments))))
      (mlir_type_parameter
        (mlir_type_special_character))
      (mlir_type_parameter
        (parameter_member
          value: (self)
          member: (identifier)))
      (mlir_type_parameter
        (mlir_type_special_character))))
  (comptime_statement
    left: (comptime_parameter
      name: (identifier)
      parameters: (parameters_declaration
        (constrained_parameter_decl
          name: (identifier)
          constraint: (parameter
            (identifier)))
        (constrained_parameter_decl
          name: (identifier)
          constraint: (parameter
            (identifier)))))
    right: (mlir_type
      (mlir_type_parameter
        (mlir_type_prefix)
        (mlir_parameter
          (mlir_dotted_identifier
            (identifier)
            (identifier)))
        (mlir_type_special_character))
      (mlir_type_parameter
        (unary_operator
          argument: (member_access
            value: (identifier)
            member: (member_call
              function: (member_subscript
                value: (identifier)
                parameters: (parameters
                  (named_parameter
                    name: (identifier)
                    value: (parameter
                      (identifier)))
                  (named_parameter
                    name: (identifier)
                    value: (parameter
                      (identifier)))
                  (named_parameter
                    name: (identifier)
                    value: (generic_parameter
                      value: (identifier)
                      parameters: (parameters
                        (parameter
                          (identifier)))))))
              arguments: (arguments))
            member: (identifier))))
      (mlir_type_parameter
        (mlir_parameter
          (mlir_dotted_identifier
            (identifier)))
        (mlir_type_special_character))))
  (comptime_statement
    left: (comptime_parameter
      name: (identifier))
    right: (mlir_type
      (mlir_type_parameter
        (mlir_type_prefix)
        (mlir_parameter
          (mlir_dotted_identifier
            (identifier)
            (identifier)))
        (mlir_type_special_character)
        (mlir_type_special_character))
      (mlir_type_parameter
        (call
          function: (identifier)
          arguments: (arguments
            (member_access
              value: (self)
              member: (identifier)
              member: (identifier)))))
      (mlir_type_parameter
        (parameter_member
          value: (self)
          member: (identifier)
          member: (identifier)))
      (mlir_type_parameter
        (mlir_parameter
          (mlir_dotted_identifier
            (identifier)))
        (mlir_type_special_character))))
  (comptime_statement
    left: (comptime_parameter
      name: (identifier))
    right: (mlir_type
      (mlir_type_parameter
        (mlir_type_prefix)
        (mlir_parameter
          (mlir_dotted_identifier
            (identifier)
            (identifier)))
        (mlir_type_special_character)
        (mlir_type_special_character)
        (mlir_parameter
          (mlir_dotted_identifier
            (identifier)))
        (mlir_type_special_character)
        (mlir_type_special_character))
      (mlir_type_parameter
        (call
          function: (identifier)
          arguments: (arguments
            (member_access
              value: (self)
              member: (identifier)
              member: (identifier)))))
      (mlir_type_parameter)
      (mlir_type_parameter
        (parameter_member
          value: (self)
          member: (identifier)
          member: (identifier)))
      (mlir_type_parameter
        (mlir_type_special_character)
        (mlir_type_special_character)
        (mlir_type_special_character))))
  (comptime_statement
    left: (comptime_parameter
      name: (identifier))
    right: (mlir_type
      (mlir_type_parameter
        (mlir_type_prefix)
        (mlir_parameter
          (mlir_dotted_identifier
            (identifier)
            (identifier)))
        (mlir_type_special_character)
        (mlir_type_special_character)
        (mlir_parameter
          (mlir_dotted_identifier
            (identifier)))
        (mlir_type_special_character)
        (mlir_parameter
          (mlir_dotted_identifier
            (identifier)))
        (mlir_type_special_character))
      (mlir_type_parameter
        (parameter_member
          value: (self)
          member: (identifier)))
      (mlir_type_parameter
        (mlir_parameter
          (mlir_dotted_identifier
            (identifier)))
        (mlir_type_special_character))))
  (comptime_statement
    left: (comptime_parameter
      name: (identifier))
    right: (mlir_type
      (mlir_type_parameter
        (mlir_type_prefix)
        (mlir_parameter
          (mlir_dotted_identifier
            (identifier)
            (identifier)
            (identifier)))
        (mlir_type_special_character)
        (mlir_type_special_character)
        (mlir_parameter
          (mlir_dotted_identifier
            (identifier)))
        (mlir_type_special_character))
      (mlir_type_parameter
        (parameter_member
          value: (self)
          member: (identifier)))
      (mlir_type_parameter
        (mlir_type_special_character))
      (mlir_type_parameter
        (parameter_member
          value: (self)
          member: (identifier)
          member: (identifier)))
      (mlir_type_parameter
        (mlir_type_special_character))
      (mlir_type_parameter
        (parameter_member
          value: (self)
          member: (identifier)
          member: (identifier)))
      (mlir_type_parameter
        (mlir_type_special_character))))
  (comptime_statement
    left: (comptime_parameter
      name: (identifier)
      parameters: (parameters_declaration
        (constrained_parameter_decl
          name: (identifier)
          constraint: (parameter
            (identifier)))))
    right: (mlir_type
      (mlir_type_parameter
        (mlir_type_prefix)
        (mlir_parameter
          (mlir_dotted_identifier
            (identifier)
            (identifier)))
        (mlir_type_special_character)
        (mlir_type_special_character)
        (mlir_string)
        (mlir_type_special_character))
      (mlir_type_parameter
        (unary_operator
          argument: (identifier)))
      (mlir_type_parameter
        (mlir_type_special_character)
        (mlir_string)
        (mlir_type_special_character))
      (mlir_type_parameter
        (unary_operator
          argument: (member_access
            value: (self)
            member: (identifier))))
      (mlir_type_parameter
        (mlir_type_special_character))
      (mlir_type_parameter
        (unary_operator
          argument: (identifier)))
      (mlir_type_parameter
        (mlir_type_special_character))))
  (comptime_statement
    left: (comptime_parameter
      name: (identifier)
      parameters: (parameters_declaration
        (constrained_parameter_decl
          name: (identifier)
          constraint: (parameter
            (identifier)))))
    right: (mlir_type
      (mlir_type_parameter
        (mlir_type_prefix)
        (mlir_parameter
          (mlir_dotted_identifier
            (identifier)
            (identifier)))
        (mlir_type_special_character)
        (mlir_type_special_character)
        (mlir_string)
        (mlir_type_special_character))
      (mlir_type_parameter
        (unary_operator
          argument: (identifier)))
      (mlir_type_parameter
        (mlir_type_special_character)
        (mlir_string)
        (mlir_type_special_character))
      (mlir_type_parameter
        (parameter_member
          value: (identifier)
          member: (member_subscript
            value: (identifier)
            parameters: (parameters
              (parameter_member
                value: (self)
                member: (identifier))))))
      (mlir_type_parameter
        (mlir_type_special_character)
        (mlir_string)
        (mlir_type_special_character))
      (mlir_type_parameter
        (parameter
          (identifier)))
      (mlir_type_parameter
        (mlir_type_special_character))
      (mlir_type_parameter
        (unary_operator
          argument: (identifier)))
      (mlir_type_parameter
        (mlir_type_special_character))))
  (struct_declaration
    (struct_header
      name: (identifier)
      parameters: (parameters_declaration
        (constrained_parameter_decl
          name: (identifier)
          constraint: (mlir_type
            (mlir_type_prefix)
            (mlir_parameter
              (mlir_dotted_identifier
                (identifier)
                (identifier))))))
      conformance: (conformance
        (parameter
          (identifier))
        (parameter
          (identifier))
        (parameter
          (identifier))
        (parameter
          (identifier))
        (parameter
          (identifier))
        (parameter
          (identifier))
        (parameter
          (identifier))
        (parameter
          (identifier))
        (parameter
          (identifier))))
    body: (block
      (pass_statement)))
  (function_declaration
    (function_signature
      name: (identifier)
      parameters: (parameters_declaration
        (constrained_parameter_decl
          name: (identifier)
          constraint: (parameter
            (identifier))))
      arguments: (callable_parameters)
      return_type: (mlir_type
        (mlir_type_prefix)
        (mlir_parameter
          (mlir_dotted_identifier
            (identifier)
            (identifier)))))
    body: (block
      (pass_statement))))

================================================================================
MLIR: attr
================================================================================

if self == DType.int8:
    return __mlir_attr.si8

if in_type != out_type and in_type.is_integral():
    return __mlir_attr.`si32`

if self == FastMathFlag.NONE:
    return __mlir_attr.`#pop<fmf none>`

comptime _mIsSigned = __mlir_attr.`#kgen.simd<1> : !kgen.scalar<ui8>`
comptime nan = FloatLiteral[__mlir_attr.`#pop.float_literal<nan>`]()
comptime async_copies_scope = __mlir_attr.`[#llvm.alias_scope<id= "amdgpu.AsyncCopies", domain=#llvm.alias_scope_domain<id = "amdgpu.AsyncOps">>]`
comptime kind_attr = __mlir_attr.`#nvvm.grid_dep_action launch_dependents`

comptime mlir_type = __mlir_attr[
    `#kgen.param.expr<rebind, #kgen.type<!kgen.param<`,
    type,
    `>> : `,
    AnyType,
    `> : !kgen.type`,
]

comptime if dtype == DType.float8_e4m3fn:
    return rebind[Scalar[dtype]](
        __mlir_attr.`#kgen.simd<"-inf"> : !kgen.scalar<f8e4m3fn>`,
    )

comptime GLOBAL = AddressSpace(
    __mlir_attr[`#lit.struct<{_mlir_value = 1}> : `, SIMDSize]
)

comptime field[name: StringLiteral] = Reflected[
    __mlir_attr[
        `#kgen.struct_field_type_by_name<`,
        Self.T,
        `, `,
        name.value,
        `> : `,
        AnyType,
    ]
]

comptime __getitem_param__[idx: SIMDSize] = __mlir_attr[
    `#kgen.param_list.get<:`,
    Self._mlir_type,
    ` `,
    +Self.values,
    `, `,
    idx._mlir_value,
    `> : `,
    +Self.Trait,
]

comptime StaticConstantOrigin = Origin[
    _mlir_origin=__mlir_attr[
        `#lit.origin.field<`,
        `#lit.static.origin : !lit.origin<false>`,
        `, "__constants__"> : !lit.origin<false>`,
    ]
]()

comptime reduce_idx[
    FromAndTo: AnyType,
    //,
    BaseVal: FromAndTo,
] = __mlir_attr[
    `#kgen.param_list.reduce<`,
    BaseVal,
    `,`,
    Self.values,
    `,`,
    Self._IndexToIntWrap[
        FromAndTo,
        Self._PassIndexReducerWrapper[FromAndTo, ...],
        ...,
    ],
    `> : `,
    +FromAndTo,
]

def _cross_compilation() -> Bool:
    return __mlir_attr.`#kgen.param.expr<cross_compilation> : i1`

def _get_shape[m: Int, n: Int, k: Int]() -> __mlir_type.`!kgen.deferred`:
    return __mlir_deferred_attr[
        `#nvvm.shape<m =`,
        +m.__mlir_index__(),
        `, n =`,
        +n.__mlir_index__(),
        `, k =`,
        +k.__mlir_index__(),
        `>`,
    ]

def __init__(
    existing: TypeList[...],
    out self: TypeList[
        Trait=Self.Trait,
        __mlir_attr[
            `#kgen.upcast<`,
            existing.values,
            `> : `,
            _MLIR.KGENParamListType[Self.Trait],
        ],
    ],
) where __mlir_attr[
    `#kgen.is_refined_type<`, existing.Trait, `, `, Self.Trait, `>`
]:
    pass

def _type_is_eq[t1: AnyType, t2: AnyType]() -> Bool:
    return __mlir_attr[
        `#kgen.param.expr<eq,`,
        `#kgen.type<`,
        +t1,
        `> : !kgen.type`,
        `,`,
        `#kgen.type<`,
        +t2,
        `> : !kgen.type`,
        `> : !kgen.scalar<bool>`,
    ]

def _get_860m_target() -> _TargetType:
    return __mlir_attr[
        `#kgen.target<triple = "amdgcn-amd-amdhsa", `,
        `arch = "gfx1152", `,
        `features = "", `,
        `data_layout = "e-m:e-p:64:64-p1:64:64-p2:32:32-p3:32:32-p4:64:64-p5:32:32-p6:32:32-p7:160:256:256:32-p8:128:128:128:48-p9:192:256:256:32-i64:64-v16:16-v24:32-v32:32-v48:64-v96:128-v192:256-v256:256-v512:512-v1024:1024-v2048:2048-n32:64-S32-A5-G1-ni:7:8:9",`,
        `index_bit_width = 64,`,
        `simd_bit_width = 128`,
        `> : !kgen.target`,
    ]

--------------------------------------------------------------------------------
